[package]
name = "computer-vision-printer"
version = "0.1.0"
edition = "2021"

[dependencies]
printpdf = "0.5.3"
reqwest = { version = "0.11.18", features = ["stream"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["fs", "full"] }
